# indemind_lib

./: CMakeLists.txt  README.md
cmake/: IndemindConfig.cmake
udev/: 50-indemind.rules
